# hydra-core

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Readme.md  conanfile.txt
.conan_config/: conan.conf  remotes.txt
.conan_config/profiles/: clang  clang-11  vs-2019  vs-default
app/sandbox/: CMakeLists.txt
app/sandbox/src/: CMakeLists.txt  main.cpp
cmake/: HydraConfig.cmake.in  build_info.cmake  compileTimeVersionInfo.cmake
cmake/macros/: build_info_functions.cmake
cmake/modules/: GetGitRevisionDescription.cmake
src/: version.h.in
system_test/: Readme.md  requirements.txt
